--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="header">EVENT</div>
       <div class="menu">
         <ul class="EvtAllMenu">
-          <li class="EvtTapSpace"><a class="EvtTapMenu" href="SPECIAL.html" style="color: red;">SPECIAL</a></li>
+          <li class="EvtTapSpace"><a class="EvtTapMenu" href="index.html" style="color: red;">SPECIAL</a></li>
           <li class="EvtTapSpace"><a class="EvtTapMenu" href="MovieBook.html">영화/예매</a></li>
           <li class="EvtTapSpace"><a class="EvtTapMenu" href="MembershipCLUB.html">멤버십/CLUB</a></li>
           <li class="EvtTapSpace"><a class="EvtTapMenu" href="CGVCinema.html">CGV 극장별</a></li>
