--- a/PartnershipDiscount.html
+++ b/PartnershipDiscount.html
@@ -115,48 +115,48 @@
       <div class="inner-container">
         <div class="main1">
           <img class="ImgSize" src="PartnershipDiscount/1.jpeg">
-          <p class="Contents">압구정 IMAX 신규 오픈</p>
-          <p class="ContentsDate">2022.08.12~2022.08.18</p>
+          <p class="Contents">CGV X 우리카드 PLCC 출시!</p>
+          <p class="ContentsDate">2022.12.21~2022.12.31</p>
         </div>
         <div class="main2">
           <img class="ImgSize" src="PartnershipDiscount/2.jpeg">
-          <p class="Contents">개봉작 사용설명서</p>
-          <p class="ContentsDate"> </p>
+          <p class="Contents" style="padding-bottom: 0px;">현대백화점 모바일카드 신규 가입 프로모션</p>
+          <p class="ContentsDate" style="padding-top: 10px;">2022.08.15~2022.08.31</p>
         </div>
         <div class="main3">
           <img class="ImgSize" src="PartnershipDiscount/3.jpeg">
-          <p class="Contents">[불릿 트레인] SX 리미티드 포스터</p>
-          <p class="ContentsDate">2022.08.18~2022.09.11</p>
+          <p class="Contents">PAYCO로 결제 시 1천원 할인!</p>
+          <p class="ContentsDate">2022.08.08~2022.08.31</p>
         </div>
         <div class="main4">
           <img class="ImgSize" src="PartnershipDiscount/4.jpeg">
-          <p class="Contents">[불릿 트레인] 4DX 리미티드 포스터</p>
-          <p class="ContentsDate">2022.08.18~2022.09.11</p>
+          <p class="Contents">CGV 4,000원∙8,000원 할인</p>
+          <p class="ContentsDate">2022.08.03~2022.09.30</p>
         </div>
         <div class="main5">
           <img class="ImgSize" src="PartnershipDiscount/5.jpeg">
-          <p class="Contents">[불릿 트레인] 필름마크</p>
-          <p class="ContentsDate">2022.08.17~2022.09.11</p>
+          <p class="Contents" style="padding-bottom: 0px;">CGV우리카드 이용 시 영화관람권 10매 제공!</p>
+          <p class="ContentsDate" style="padding-top: 10px;">2022.08.01~2022.08.31</p>
         </div>
         <div class="main6">
           <img class="ImgSize" src="PartnershipDiscount/6.jpeg">
-          <p class="Contents">라스트 특가</p>
-          <p class="ContentsDate">2022.08.08~2022.08.23</p>
+          <p class="Contents" style="padding-bottom: 0px;">TOSS로 결제하고 3천원 캐시백 혜택 받기!</p>
+          <p class="ContentsDate" style="padding-top: 10px;">2022.08.01~2022.09.30</p>
         </div>
         <div class="main7">
           <img class="ImgSize" src="PartnershipDiscount/7.jpeg">
-          <p class="Contents">[귀멸의 칼날: 아사쿠사 편] 필름마크</p>
-          <p class="ContentsDate">2022.08.18~2022.09.11</p>
+          <p class="Contents" style="padding-bottom: 0px;">우체국 체크카드 회원이라면 CGV에서 할인 받자!</p>
+          <p class="ContentsDate" style="padding-top: 10px;"> </p>
         </div>
         <div class="main8">
           <img class="ImgSize" src="PartnershipDiscount/8.jpeg">
-          <p class="Contents">[탑건: 매버릭] 4DX 특별 포스터</p>
-          <p class="ContentsDate">2022.08.12~2022.08.23</p>
+          <p class="Contents">2022년 KT멤버십 혜택!</p>
+          <p class="ContentsDate">2022.01.01~2022.12.31</p>
         </div>
         <div class="main9">
           <img class="ImgSize" src="PartnershipDiscount/9.jpeg">
-          <p class="Contents">[헌트] 필름마크</p>
-          <p class="ContentsDate">2022.08.03~2022.08.28</p>
+          <p class="Contents">LGU+'영화콕'</p>
+          <p class="ContentsDate">2022.01.01~2022.12.31</p>
         </div>
       </div>
       <div class="sidebar1">
