--- a/CGVCinema.html
+++ b/CGVCinema.html
@@ -115,48 +115,48 @@
       <div class="inner-container">
         <div class="main1">
           <img class="ImgSize" src="CGVCinema/1.jpeg">
-          <p class="Contents">압구정 IMAX 신규 오픈</p>
-          <p class="ContentsDate">2022.08.12~2022.08.18</p>
+          <p class="Contents" style="padding-bottom: 0px;">[CGV기흥] 카카오톡 플러스친구 이벤트</p>
+          <p class="ContentsDate" style="padding-top: 10px;">2022.08.18~2022.12.31</p>
         </div>
         <div class="main2">
           <img class="ImgSize" src="CGVCinema/2.jpeg">
-          <p class="Contents">개봉작 사용설명서</p>
-          <p class="ContentsDate"> </p>
+          <p class="Contents">8월 사이다경제 포리얼 리더</p>
+          <p class="ContentsDate">2022.08.17~2022.08.23</p>
         </div>
         <div class="main3">
           <img class="ImgSize" src="CGVCinema/3.jpeg">
-          <p class="Contents">[불릿 트레인] SX 리미티드 포스터</p>
-          <p class="ContentsDate">2022.08.18~2022.09.11</p>
+          <p class="Contents">집에서 팝콘 시키고 경품받자!</p>
+          <p class="ContentsDate">2022.08.17~2022.12.31</p>
         </div>
         <div class="main4">
           <img class="ImgSize" src="CGVCinema/4.jpeg">
-          <p class="Contents">[불릿 트레인] 4DX 리미티드 포스터</p>
-          <p class="ContentsDate">2022.08.18~2022.09.11</p>
+          <p class="Contents" style="padding-bottom: 0px;">[CGV명동역씨네라이브러리] Restart, 명씨네</p>
+          <p class="ContentsDate" style="padding-top: 10px;">2022.08.17~2022.08.31</p>
         </div>
         <div class="main5">
           <img class="ImgSize" src="CGVCinema/5.jpeg">
-          <p class="Contents">[불릿 트레인] 필름마크</p>
-          <p class="ContentsDate">2022.08.17~2022.09.11</p>
+          <p class="Contents" style="padding-bottom: 0px;">[CGV울산삼산] 헤어르뽀렘 40% 할인</p>
+          <p class="ContentsDate" style="padding-top: 10px;">2022.08.16~2022.10.31</p>
         </div>
         <div class="main6">
           <img class="ImgSize" src="CGVCinema/6.jpeg">
-          <p class="Contents">라스트 특가</p>
-          <p class="ContentsDate">2022.08.08~2022.08.23</p>
+          <p class="Contents" style="padding-bottom: 0px;">[그림향기] 이중섭&지금, 여기, 한국 현대작가들</p>
+          <p class="ContentsDate" style="padding-top: 10px;">2022.08.11~2022.08.27</p>
         </div>
         <div class="main7">
           <img class="ImgSize" src="CGVCinema/7.jpeg">
-          <p class="Contents">[귀멸의 칼날: 아사쿠사 편] 필름마크</p>
-          <p class="ContentsDate">2022.08.18~2022.09.11</p>
+          <p class="Contents">[아트&다이닝] 나의 사랑, 나의 파리</p>
+          <p class="ContentsDate">2022.08.11~2022.08.28</p>
         </div>
         <div class="main8">
           <img class="ImgSize" src="CGVCinema/8.jpeg">
-          <p class="Contents">[탑건: 매버릭] 4DX 특별 포스터</p>
-          <p class="ContentsDate">2022.08.12~2022.08.23</p>
+          <p class="Contents" style="padding-bottom: 0px;">8월 씨네드쉐프 X 김형석작곡가 프로그램</p>
+          <p class="ContentsDate" style="padding-top: 10px;">2022.08.09~2022.08.26</p>
         </div>
         <div class="main9">
           <img class="ImgSize" src="CGVCinema/9.jpeg">
-          <p class="Contents">[헌트] 필름마크</p>
-          <p class="ContentsDate">2022.08.03~2022.08.28</p>
+          <p class="Contents" style="padding-bottom: 0px;">윤지원의 렉쳐콘서트 예술가의 와인, 헝가리</p>
+          <p class="ContentsDate" style="padding-top: 10px;">2022.08.09~2022.08.28</p>
         </div>
       </div>
       <div class="sidebar1">
